--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
+<?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_nam">Maths</string>
+    <string name="app_name">TicTacToe</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
 
@@ -20,10 +21,4 @@
         <item>9</item>
         <item>10</item>
     </string-array>
-
-    <resources>
-        <string name="app_name">TicTacToe</string>
-    </resources>
-
-
 </resources>
